# life_sim_01

./: README.md  main.py  pyproject.toml
life_sim/: types.py
src/: world.py
src/configs/: default.yaml
