[project]
name = "life_sim"
version = "0.1.0"
description = "Basic life-like simulation with baselines, Q-learning, memory, and simple evaluation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.4.4",
  "pandas>=3.0.2",
  "pyyaml>=6.0.3",
  "rich>=15.0.0",
  "typer>=0.24.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "life_sim",
  "life_sim.policies",
  "life_sim.learning",
  "life_sim.memory",
  "life_sim.evolution",
]
